<resources>
    <string name="app_name">ElternV1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_reminders">RemindersActivity</string>
    <string name="title_activity_main_carer_screen">MainCarerScreen</string>
    <string name="title_activity_reminders_carer">RemindersCarerActivity</string>
    <string name="title_activity_add_reminders_carer">AddRemindersCarerActivity</string>
    <string name="title_activity_add_reminders_elderly">AddRemindersElderlyActivity</string>
    <string name="title_activity_edit_reminder">EditReminderActivity</string>
    <string name="title_activity_edit_reminder_elder">EditReminderElderActivity</string>
    <string name="title_activity_forget_password_user_name">ForgetPasswordUserNameActivity</string>
    <string name="title_activity_completed_reminders_elders">CompletedRemindersEldersActivity
    </string>
    <string name="title_activity_completed_reminders_carer">CompletedRemindersCarerActivity</string>
    <string name="title_activity_past_reminders_elderly">PastRemindersElderlyActivity</string>
    <string name="title_activity_past_reminders_carer">PastRemindersCarerActivity</string>
    <string name="title_activity_sms_elderly">SmsElderlyActivity</string>
    <string name="title_activity_sms_carer">SmsCarerActivity</string>
    <string name="title_activity_setup_emergency_call_carer">SetupEmergencyCallCarerActivity
    </string>
    <string name="title_activity_find_hospital">FindHospitalActivity</string>
    <string name="title_activity_find_elderly">FindElderlyActivity</string>
    <string name="title_activity_view_past_reminder_elder">ViewPastReminderElder</string>
    <string name="title_activity_view_past_reminder_carer">ViewPastReminderCarerActivity</string>
    <string name="title_activity_find_toilet">FIndToiletActivity</string>

    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="current_Location">Current Location</string>
    <string name="title_activity_new_find_hospital">NewFindHospitalActivity</string>
    <string name="title_activity_new_find_toilet">NewFindToiletActivity</string>
    <string name="find_elderly">Find Elderly</string>
    <string name="find_hospital">Find Hospital</string>
    <string name="find_toilet">Find Toilet</string>
    <string name="alert_dismiss">Dismiss</string>
    <string name="alert_yes">Will Do</string>
    <string name="alert_ok">OK</string>

</resources>
