<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FindElderlyActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/mapTypeNormal"
        android:title="@string/normal" />
    <item
        android:id="@+id/mapTypeSatellite"
        android:title="@string/satellite" />
    <item
        android:id="@+id/mapTypeTerrain"
        android:title="@string/terrain" />
    <item
        android:id="@+id/mapTypeHybrid"
        android:title="@string/hybrid" />
    <item
        android:id="@+id/mapTypeNone"
        android:title="@string/none" />

</menu>